--- a/UTS.WPF/App.xaml
+++ b/UTS.WPF/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:UTS.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Strings.cs-CZ.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
