--- a/UTS.WPF/Strings.cs-CZ.xaml
+++ b/UTS.WPF/Strings.cs-CZ.xaml
@@ -10,4 +10,15 @@
     <sys:String x:Key="Col_Missing">Chybí</sys:String>
     <sys:String x:Key="Hdr_Test">Test</sys:String>
     <sys:String x:Key="A11y_Warnings">Seznam varování</sys:String>
+    <sys:String x:Key="MenuItem_File">Soubor</sys:String>
+    <sys:String x:Key="MenuItem_File_Open">Otevřít</sys:String>
+    <sys:String x:Key="MenuItem_File_New">Nová třída</sys:String>
+    <sys:String x:Key="MenuItem_File_Save">Uložit</sys:String>
+    <sys:String x:Key="MenuItem_File_SaveAs">Uložit jako</sys:String>
+    <sys:String x:Key="CreateClassDialog_Header">Nová třída</sys:String>
+    <sys:String x:Key="CreateClassDialog_Students_Header">Žáci (jeden na řádek):</sys:String>
+    <sys:String x:Key="CreateClassDialog_Class_Settings">Třída:</sys:String>
+    <sys:String x:Key="CreateClassDialog_Class_Name">Název:</sys:String>
+    <sys:String x:Key="CreateClassDialog_Class_Test_Count">Počet testů:</sys:String>
+    
 </ResourceDictionary>
