--- a/UTS.WPF/MainWindow.xaml
+++ b/UTS.WPF/MainWindow.xaml
@@ -2,14 +2,24 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:UTS.WPF"
-        xmlns:convertors="clr-namespace:UTS.WPF.Convertors"
+        xmlns:convertors="clr-namespace:UTS.WPF.Convertors" 
+        xmlns:mvvm="clr-namespace:UTS.WPF.MVVM" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         Title="{DynamicResource AppTitle}"
-        Width="1100" Height="700">
+        Width="1100" Height="700"
+        >
 
     <Window.Resources>
         <convertors:CellStateToBrushConverter x:Key="CellStateToBrush"/>
         <convertors:CellStateToGlyphConverter x:Key="CellStateToGlyph"/>
     </Window.Resources>
+
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding OpenCommand}"    Key="O" Modifiers="Control"/>
+        <KeyBinding Command="{Binding SaveCommand}"    Key="S" Modifiers="Control"/>
+        <KeyBinding Command="{Binding SaveAsCommand}"  Key="S" Modifiers="Control+Alt"/>
+        <KeyBinding Command="{Binding NewCommand}"     Key="N" Modifiers="Control"/>
+    </Window.InputBindings>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -19,10 +29,10 @@
 
         <Menu>
             <MenuItem Header="{DynamicResource MenuItem_File}">
-                <MenuItem Header="{DynamicResource MenuItem_File_Open}" x:Name="MenuItem_File_Open"/>
-                <MenuItem Header="{DynamicResource MenuItem_File_New}" x:Name="MenuItem_File_New"/>
-                <MenuItem Header="{DynamicResource MenuItem_File_Save}" x:Name="MenuItem_File_Save"/>
-                <MenuItem Header="{DynamicResource MenuItem_File_SaveAs}" x:Name="MenuItem_File_SaveAs"/>
+                <MenuItem Header="{DynamicResource MenuItem_File_Open}" Command="{Binding OpenCommand}"/>
+                <MenuItem Header="{DynamicResource MenuItem_File_New}" Command="{Binding NewCommand}"/>
+                <MenuItem Header="{DynamicResource MenuItem_File_Save}" Command="{Binding SaveCommand}"/>
+                <MenuItem Header="{DynamicResource MenuItem_File_SaveAs}" Command="{Binding SaveAsCommand}"/>
             </MenuItem>
         </Menu>
         
