--- a/UTS.WPF/Strings.en-US.xaml
+++ b/UTS.WPF/Strings.en-US.xaml
@@ -2,19 +2,26 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=System.Runtime">
     <sys:String x:Key="AppTitle">Ultimate torturer of students</sys:String>
-    <sys:String x:Key="Panel_Title_Diagnostics">Diagnostics</sys:String>
-    <sys:String x:Key="Panel_Title_Warnings">Warning</sys:String>
-    <sys:String x:Key="Panel_Title_BelowE">Bellow minimum</sys:String>
+
+    <!-- Columns -->
     <sys:String x:Key="Col_Student">Student</sys:String>
     <sys:String x:Key="Col_Graded">Graded</sys:String>
     <sys:String x:Key="Col_Missing">Absent</sys:String>
+    <sys:String x:Key="Col_Note">Note</sys:String>
     <sys:String x:Key="Hdr_Test">Test</sys:String>
     <sys:String x:Key="A11y_Warnings">Warnings</sys:String>
+
+    <!-- Menu -->
     <sys:String x:Key="MenuItem_File">File</sys:String>
     <sys:String x:Key="MenuItem_File_Open">Open</sys:String>
     <sys:String x:Key="MenuItem_File_New">New class</sys:String>
     <sys:String x:Key="MenuItem_File_Save">Save</sys:String>
     <sys:String x:Key="MenuItem_File_SaveAS">Save as</sys:String>
+    <sys:String x:Key="MenuItem_Settings">Settings</sys:String>
+    <sys:String x:Key="MenuItem_Settings_Language">Language</sys:String>
+    
+
+    <!-- New class Dialog -->
     <sys:String x:Key="CreateClassDialog_Header">New class</sys:String>
     <sys:String x:Key="CreateClassDialog_Students_Header">Students (one per line):</sys:String>
     <sys:String x:Key="CreateClassDialog_Class_Settings">Class:</sys:String>
